# Uniform

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
examples/shader/: CMakeLists.txt  shader.cpp
examples/texture/: CMakeLists.txt  texture.cpp
include/: logger.hpp
include/logger/: logger.hpp
include/uniform/: uniform.hpp
include/uniform/application/: application.hpp
include/uniform/application/layer/: layer.hpp
include/uniform/application/window/: video_mode.hpp  window.hpp
include/uniform/application/window/event/: event.hpp
include/uniform/core/: runtime.hpp
include/uniform/core/math/: matrix.hpp  point2.hpp  point3.hpp  size2.hpp  size3.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/uniform/core/os/: keyboard.hpp  mouse.hpp
include/uniform/core/physics/: physics.hpp
include/uniform/core/renderer/: renderer.hpp
include/uniform/modules/imgui/: imgui.hpp
include/uniform/platform/: platform.hpp
include/uniform/platform/linux/: linux.hpp
include/uniform/platform/windows/: windows.hpp
include/uniform/scene/: renderer.hpp
include/uniform/scene/2d/: camera.hpp  object.hpp  physics.hpp
src/: logger.cpp  uniform.hpp
src/logger/: logger.cpp
src/uniform/: uniform.cpp
src/uniform/application/: application.cpp  application.hpp
src/uniform/application/window/: video_mode.cpp  window.cpp  window.hpp
src/uniform/core/: int_types.hpp  point2.hpp  point3.hpp  point4.hpp  runtime.hpp  size2.hpp  size3.hpp
src/uniform/core/debug/: logger.cpp  logger.hpp
src/uniform/core/math/: matrix.cpp  matrix.hpp  matrix_fwd.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.hpp  vector_fwd.hpp
src/uniform/core/os/: keyboard.hpp  mouse.hpp
src/uniform/core/physics/: physics.hpp
src/uniform/core/renderer/: renderer.cpp
src/uniform/modules/imgui/: imgui.cpp  imgui.hpp
src/uniform/platform/: platform.hpp
src/uniform/platform/linux/: linux.hpp
src/uniform/platform/windows/: windows.hpp
src/uniform/scene/: gpu_buffer.cpp  gpu_buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/uniform/scene/2d/: camera.cpp  object.cpp  physics.cpp
tests/events/: CMakeLists.txt  events.cpp
tests/layers/: CMakeLists.txt  layers.cpp
tests/modules/: CMakeLists.txt  modules.cpp
tests/render/: CMakeLists.txt  render.cpp
tests/vector/: CMakeLists.txt  vector.cpp
tests/window/: CMakeLists.txt  window.cpp
